# tools

./: .gitignore  excel_splitter.html
serveraccounts/: README.md  create_accounts.sh  students.csv
simflow/: CLAUDE.md  Dockerfile  docker-compose.yml  index.html  nginx.conf  simflow.js  simflow_spezifikation.docx
simflow/engine/: assets.js  lexer.js  parser.js  renderer.js  runtime.js  scoring.js  stores.js  ui.js
simflow/examples/: cpu_rr.simflow  lru.simflow  prod_cons.simflow
xls2pdf/: README.md  pyproject.toml  run.sh
xls2pdf/src/xlsx_to_pdf/: cli (Kopie).py  cli.py
